# slack-thread-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  GEMINI.md  README.md  actions.prompt  jira.prompt  main.py  pyproject.toml  slack-thread-bot.service  test_main.py
