[project]
name = "slack-thread-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.4",
    "requests>=2.32.4",
    "slack-bolt>=1.23.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pylint>=3.3.7",
    "pyright>=1.1.402",
    "types-requests>=2.32.4.20250611",
]
